tests/typing/faulty_assignment.sy
start :: fn do
    a := 1
    a = 3
    a = "abc"
    b :: "abc"
    b = "abc"
    a = 2
    a += "abc"
    a: {str: int} = {"ab": 2}
    a: {int} = [2, 2]
end
// error: $Mismatch { got: Type::String, expected: Type::Int }
